--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.2
   path: ^1.9.1
-  intl: ^0.20.2
+  intl: ^0.19.0
+  fl_chart: ^0.70.2
+  month_year_picker: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
