--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.70.2
   month_year_picker: ^0.4.0+1
+  file_picker: ^9.0.2
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
