--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   month_year_picker: ^0.4.0+1
   file_picker: ^9.0.2
   excel: ^4.0.6
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
