--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   file_picker: ^9.0.2
   excel: ^4.0.6
   flutter_screenutil: ^5.9.3
+  share_plus: ^7.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
