--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = myfinance2
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.myfinance2
+PRODUCT_BUNDLE_IDENTIFIER = com.lorentz.seaeyes.moneepi
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
